Issue #3203750 by robertragas: set max height to the photo album pop-up to avoid pictures being cut off

--- a/modules/social_features/social_post/modules/social_post_album/assets/css/social-post-album--popup.css
+++ b/modules/social_features/social_post/modules/social_post_album/assets/css/social-post-album--popup.css
@@ -214,6 +214,8 @@
     display: flex;
     align-items: center;
     justify-content: center; }
+    .social-post-album--popup-slider-wrapper.slick-initialized .slick-slide img {
+      max-height: 100vh; }
   .social-post-album--popup-slider-wrapper.slick-initialized .slick-prev {
     left: 0; }
     @media (min-width: 900px) {
